--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,19 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content class="ion-padding">
+  <div class="container">
+    <h1 class="title">Cul de Chouette</h1>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+    <div class="buttons-container">
+      <ion-button expand="block" class="menu-button" (click)="nouvellePartie()">
+        Nouvelle partie
+      </ion-button>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+      <ion-button expand="block" class="menu-button" (click)="continuerPartie()">
+        Continuer partie
+      </ion-button>
+
+      <ion-button expand="block" class="menu-button" (click)="voirRegles()">
+        Règles
+      </ion-button>
+    </div>
   </div>
 </ion-content>
