--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,36 @@
-#container {
+ion-content {
+  --background: #f4f5f8;
+}
+
+.container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+}
+
+.title {
   text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 40px;
+  margin-top: 40px;
+  color: #333;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
+.buttons-container {
+  width: 100%;
+  max-width: 300px;
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
+  ion-button {
+    margin-bottom: 20px;
+    height: 50px;
+    --border-radius: 10px;
+    --background: #3880ff;
 
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+    &:hover {
+      --background: #3171e0;
+    }
+  }
 }
