--- a/src/app/components/buttons/add-button/add-button.component.html
+++ b/src/app/components/buttons/add-button/add-button.component.html
@@ -1,5 +1,3 @@
-<ion-fab>
-  <ion-fab-button size="small">
-    <ion-icon name="add"></ion-icon>
-  </ion-fab-button>
-</ion-fab>
+<ion-button shape="round">
+  <ion-icon name="add" slot="icon-only"></ion-icon>
+</ion-button>
