--- a/src/app/components/buttons/close-button/close-button.component.html
+++ b/src/app/components/buttons/close-button/close-button.component.html
@@ -1,5 +1,3 @@
-<ion-fab>
-  <ion-fab-button size="small" color="danger">
-    <ion-icon name="close"></ion-icon>
-  </ion-fab-button>
-</ion-fab>
+<ion-button shape="round" color="danger">
+  <ion-icon name="close" slot="icon-only"></ion-icon>
+</ion-button>
