--- a/src/app/pages/new-game/new-game.page.html
+++ b/src/app/pages/new-game/new-game.page.html
@@ -9,17 +9,14 @@
     </div>
 
     <div class="input-container">
-      <ion-item class="player-input">
+      <ion-item class="custom-input-item">
+        <ion-label position="floating">Ajouter joueur</ion-label>
         <ion-input
-          label="Ajouter joueur"
-          labelPlacement="floating"
-          placeholder="Input name"
           [(ngModel)]="newPlayerName"
           (ionChange)="handleInputChange($event)"
         ></ion-input>
       </ion-item>
       <app-add-button (click)="addPlayer()"></app-add-button>
-
     </div>
 
     <div class="players-list">
