--- a/src/app/components/buttons/close-button/close-button.component.html
+++ b/src/app/components/buttons/close-button/close-button.component.html
@@ -1,3 +1,3 @@
-<ion-button shape="round" color="danger">
+<ion-button shape="round" color="danger" size="small">
   <ion-icon name="close" slot="icon-only"></ion-icon>
 </ion-button>
