--- a/src/app/pages/new-game/new-game.page.scss
+++ b/src/app/pages/new-game/new-game.page.scss
@@ -2,6 +2,9 @@
   display: block;
   height: 100%;
 }
+ion-content {
+  --background: #f4f5f8;
+}
 
 .game-container {
   max-width: 600px;
@@ -156,6 +159,10 @@ ion-item.custom-input-item {
   app-cancel-button,
   app-validate-button {
     flex: 1;
+  }
+
+  app-validate-button {
+    display: contents;
   }
 }
 
